<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/scheduleDetail_toolbarBackgroundColor">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Toolbar
            android:id="@+id/toolbarConference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/scheduleDetail_toolbarBackgroundColor"/>
    </com.google.android.material.appbar.AppBarLayout>-

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_marginTop="65dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/las_palmas_hotel" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tvItemUbicationDetailPlaceName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:lines="1"
                    android:text="@string/Hotel_names_LasPalmasHotel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/ScheduleItem_topicTitle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_phone"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="22dp"/>
                    <TextView
                        android:id="@+id/ubicationDetailDialogPhoneNumber"
                        android:layout_marginTop="25dp"
                        android:layout_marginLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Hotel_phones_LasPalmasHotel"
                        android:textColor="@color/scheduleDetail_descriptionAndHourColor"
                        android:textSize="@dimen/ScheduleItem_name"
                        android:gravity="left"/>
                </LinearLayout>
                <TableRow
                    android:layout_width="365dp"
                    android:layout_height="1dp"
                    android:background="#333333"
                    android:layout_marginTop="18dp"
                    android:layout_marginLeft="23dp"/>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_pin"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="22dp"/>
                    <TextView
                        android:layout_marginTop="25dp"
                        android:layout_marginLeft="15dp"
                        android:id="@+id/ubicationDetailDialogAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Hotel_address_LasPalmasHotel"
                        android:textColor="@color/scheduleDetail_descriptionAndHourColor"
                        android:textSize="@dimen/ScheduleItem_name"
                        android:gravity="left"/>
                </LinearLayout>
                <TableRow
                    android:layout_width="365dp"
                    android:layout_height="1dp"
                    android:background="#333333"
                    android:layout_marginTop="18dp"
                    android:layout_marginLeft="23dp"/>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>